--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,80 +1,99 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-input[type="text"] {
-  background-color: #202225;
-  border: none;
+input[type='text'] {
+  width: 50%;
+  height: 30px;
+  margin: 10px;
+  padding: 5px;
+  font-size: 18px;
+  border: 1px solid gray;
   border-radius: 5px;
-  color: #fff;
-  padding: 5px 10px;
-  width: 200px;
-  margin-bottom: 10px;
 }
 
 button {
-  background-color: #7289da;
+  width: 20%;
+  height: 40px;
+  margin: 10px;
+  font-size: 18px;
+  background-color: blue;
+  color: white;
   border: none;
   border-radius: 5px;
-  color: #fff;
-  padding: 5px 10px;
+  cursor: pointer;
 }
 
 ul {
+  width: 50%;
   list-style: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 li {
-  background-color: #2f3136;
-  color: white;
-  border-radius: 5px;
-  margin-bottom: 10px;
+  margin: 10px;
   padding: 10px;
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 
-li h2 {
-  color: #fff;
-  margin: 0;
+.table-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
 }
 
-li p {
-  color: #8f8f8f;
-  margin: 0;
+h1 {
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+input[type='number'] {
+  width: 50%;
+  height: 30px;
+  margin: 10px;
+  padding: 5px;
+  font-size: 18px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+button[type='submit'] {
+  width: 20%;
+  height: 40px;
+  margin: 10px;
+  font-size: 18px;
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#search-div {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#db-div {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
 }
